2005-07-18  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpresolutionentry.c: tweaked spacing and
	alignments to make it look more like our other widgets.

	* plug-ins/common/poppler.c: put the resolution entry into a hbox
	so that it doesn't expand horizontally; removed unused table.

2005-07-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/nlfilt.c
	* plug-ins/common/pat.c
	* plug-ins/common/svg.c
	* plug-ins/common/tiff.c
	* plug-ins/common/tile.c
	* plug-ins/common/uniteditor.c
	* plug-ins/common/wmf.c: fixed signedness warnings.

2005-07-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdnd-xds.c: added missing casts.

2005-07-17  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/pygimp-drawable.c: revert to old behavior of
	parasite_find functions returning None when there isn't a parasite
	found. Fixed bug #310666.

2005-07-17  Nathan Summers  <rock@gimp.org>

	* libgimpwidgets/gimpresolutionentry.[ch]: spiffy new widget that given
	a physical size, displays that size in an arbitrary unit, and lets
	you select a resolution via changing either the corresponding width
	and height or specifying it directly in pixels per your chosen unit.
	
	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.def 
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h: added appropriate files, function,
	headers, and types, respectively

	* devel-docs/libgimpwidgets/libgimpwidgets.types: added
	gimp_resolution_entry_get_type.  A section still needs to be created
	for it.
	
	* plug-ins/common/poppler.c (run): bugfix that accidentally wasn't
	merged in previous commit.

	* plug-ins/common/poppler.c (load_dialog): replaced resolution
	spinbutton with a GimpResolutionEntry.

2005-07-16  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: added comments about possible improvements.

2005-07-16  Nathan Summers  <rock@gimp.org>

	* plug-ins/common/poppler.c: merged in all the changes in my 